src/objects/ASCEngineer__c.object
<CustomObject>
    <description>ASC工程师信息(合作伙伴用户添加)</description>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work_Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>ASCEngineers</relationshipLabel>
        <relationshipName>ASCEngineers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>engineerIDNo__c</fullName>
        <label>engineerIDNo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engineerPhone__c</fullName>
        <description>engineerPhone</description>
        <label>engineerPhone</label>
        <type>Phone</type>
    </fields>
    <label>ASCEngineer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ASCEngineer Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>